--- a/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>13 Dec 2021, 06:21</td>
+      <td>15 Dec 2021, 17:46</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="2052938541">2.052</td>
-              <td class="duration" data-value="2052938541">2.052</td>
-              <td class="duration" data-value="2052938541">2.052</td>
+              <td class="duration" data-value="1971035575">1.971</td>
+              <td class="duration" data-value="1971035575">1.971</td>
+              <td class="duration" data-value="1971035575">1.971</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="120965053">0.120</td>
-              <td class="duration" data-value="120965053">0.120</td>
-              <td class="duration" data-value="120965053">0.120</td>
+              <td class="duration" data-value="121727663">0.121</td>
+              <td class="duration" data-value="121727663">0.121</td>
+              <td class="duration" data-value="121727663">0.121</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="158013530">0.158</td>
-              <td class="duration" data-value="158013530">0.158</td>
-              <td class="duration" data-value="158013530">0.158</td>
+              <td class="duration" data-value="156381957">0.156</td>
+              <td class="duration" data-value="156381957">0.156</td>
+              <td class="duration" data-value="156381957">0.156</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="190183">0.000</td>
-              <td class="duration" data-value="190183">0.000</td>
-              <td class="duration" data-value="190183">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="740917434">0.740</td>
+              <td class="duration" data-value="740917434">0.740</td>
+              <td class="duration" data-value="740917434">0.740</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="5941256605">5.941</td>
-              <td class="duration" data-value="5941256605">5.941</td>
-              <td class="duration" data-value="5941256605">5.941</td>
+              <td class="duration" data-value="6866363473">6.866</td>
+              <td class="duration" data-value="6866363473">6.866</td>
+              <td class="duration" data-value="6866363473">6.866</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14706030473">14.706</td>
-              <td class="duration" data-value="14706030473">14.706</td>
-              <td class="duration" data-value="14706030473">14.706</td>
+              <td class="duration" data-value="14583551196">14.583</td>
+              <td class="duration" data-value="14583551196">14.583</td>
+              <td class="duration" data-value="14583551196">14.583</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="630261743">0.630</td>
-              <td class="duration" data-value="630261743">0.630</td>
-              <td class="duration" data-value="630261743">0.630</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="820898004">0.820</td>
+              <td class="duration" data-value="820898004">0.820</td>
+              <td class="duration" data-value="820898004">0.820</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2354145933">2.354</td>
-              <td class="duration" data-value="2354145933">2.354</td>
-              <td class="duration" data-value="2354145933">2.354</td>
+              <td class="duration" data-value="2350977131">2.350</td>
+              <td class="duration" data-value="2350977131">2.350</td>
+              <td class="duration" data-value="2350977131">2.350</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3776783687">3.776</td>
-              <td class="duration" data-value="3776783687">3.776</td>
-              <td class="duration" data-value="3776783687">3.776</td>
+              <td class="duration" data-value="3800339317">3.800</td>
+              <td class="duration" data-value="3800339317">3.800</td>
+              <td class="duration" data-value="3800339317">3.800</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="455021798">0.455</td>
-              <td class="duration" data-value="455021798">0.455</td>
-              <td class="duration" data-value="455021798">0.455</td>
+              <td class="duration" data-value="455476445">0.455</td>
+              <td class="duration" data-value="455476445">0.455</td>
+              <td class="duration" data-value="455476445">0.455</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3137038085">3.137</td>
-              <td class="duration" data-value="3137038085">3.137</td>
-              <td class="duration" data-value="3137038085">3.137</td>
+              <td class="duration" data-value="4119435646">4.119</td>
+              <td class="duration" data-value="4119435646">4.119</td>
+              <td class="duration" data-value="4119435646">4.119</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3570831613">3.570</td>
-              <td class="duration" data-value="3570831613">3.570</td>
-              <td class="duration" data-value="3570831613">3.570</td>
+              <td class="duration" data-value="3623033006">3.623</td>
+              <td class="duration" data-value="3623033006">3.623</td>
+              <td class="duration" data-value="3623033006">3.623</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="203657318">0.203</td>
-              <td class="duration" data-value="203657318">0.203</td>
-              <td class="duration" data-value="203657318">0.203</td>
+              <td class="duration" data-value="206163336">0.206</td>
+              <td class="duration" data-value="206163336">0.206</td>
+              <td class="duration" data-value="206163336">0.206</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="201835723">0.201</td>
-              <td class="duration" data-value="201835723">0.201</td>
-              <td class="duration" data-value="201835723">0.201</td>
+              <td class="duration" data-value="201356243">0.201</td>
+              <td class="duration" data-value="201356243">0.201</td>
+              <td class="duration" data-value="201356243">0.201</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="27041180">0.027</td>
-              <td class="duration" data-value="27041180">0.027</td>
-              <td class="duration" data-value="27041180">0.027</td>
+              <td class="duration" data-value="27596381">0.027</td>
+              <td class="duration" data-value="27596381">0.027</td>
+              <td class="duration" data-value="27596381">0.027</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="8901588">0.008</td>
-              <td class="duration" data-value="8901588">0.008</td>
-              <td class="duration" data-value="8901588">0.008</td>
+              <td class="duration" data-value="8413735">0.008</td>
+              <td class="duration" data-value="8413735">0.008</td>
+              <td class="duration" data-value="8413735">0.008</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="39718652530">39.718</td>
-              <td class="duration" data-value="39718652530">39.718</td>
-              <td class="duration" data-value="39718652530">39.718</td>
+              <td class="duration" data-value="39692715379">39.692</td>
+              <td class="duration" data-value="39692715379">39.692</td>
+              <td class="duration" data-value="39692715379">39.692</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">4.533</td>
-            <td class="duration">39.718</td>
-            <td class="duration">1:17.063</td>
+            <td class="duration">4.690</td>
+            <td class="duration">39.692</td>
+            <td class="duration">1:19.746</td>
             <td>Totals</td>
           </tr>
         </tfoot>
