--- a/cucumber-reports/develop/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/develop/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>14 Dec 2021, 02:27</td>
+      <td>15 Dec 2021, 18:10</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="2006441959">2.006</td>
-              <td class="duration" data-value="2006441959">2.006</td>
-              <td class="duration" data-value="2006441959">2.006</td>
+              <td class="duration" data-value="1518612552">1.518</td>
+              <td class="duration" data-value="1518612552">1.518</td>
+              <td class="duration" data-value="1518612552">1.518</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="122203944">0.122</td>
-              <td class="duration" data-value="122203944">0.122</td>
-              <td class="duration" data-value="122203944">0.122</td>
+              <td class="duration" data-value="118746245">0.118</td>
+              <td class="duration" data-value="118746245">0.118</td>
+              <td class="duration" data-value="118746245">0.118</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="174151119">0.174</td>
-              <td class="duration" data-value="174151119">0.174</td>
-              <td class="duration" data-value="174151119">0.174</td>
+              <td class="duration" data-value="155425815">0.155</td>
+              <td class="duration" data-value="155425815">0.155</td>
+              <td class="duration" data-value="155425815">0.155</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="158669">0.000</td>
-              <td class="duration" data-value="158669">0.000</td>
-              <td class="duration" data-value="158669">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="655058286">0.655</td>
+              <td class="duration" data-value="655058286">0.655</td>
+              <td class="duration" data-value="655058286">0.655</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="6111115353">6.111</td>
-              <td class="duration" data-value="6111115353">6.111</td>
-              <td class="duration" data-value="6111115353">6.111</td>
+              <td class="duration" data-value="6639056567">6.639</td>
+              <td class="duration" data-value="6639056567">6.639</td>
+              <td class="duration" data-value="6639056567">6.639</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14884242100">14.884</td>
-              <td class="duration" data-value="14884242100">14.884</td>
-              <td class="duration" data-value="14884242100">14.884</td>
+              <td class="duration" data-value="14732718277">14.732</td>
+              <td class="duration" data-value="14732718277">14.732</td>
+              <td class="duration" data-value="14732718277">14.732</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="183400">0.000</td>
-              <td class="duration" data-value="183400">0.000</td>
-              <td class="duration" data-value="183400">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="1226474916">1.226</td>
+              <td class="duration" data-value="1226474916">1.226</td>
+              <td class="duration" data-value="1226474916">1.226</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2358277333">2.358</td>
-              <td class="duration" data-value="2358277333">2.358</td>
-              <td class="duration" data-value="2358277333">2.358</td>
+              <td class="duration" data-value="2354304650">2.354</td>
+              <td class="duration" data-value="2354304650">2.354</td>
+              <td class="duration" data-value="2354304650">2.354</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3889618900">3.889</td>
-              <td class="duration" data-value="3889618900">3.889</td>
-              <td class="duration" data-value="3889618900">3.889</td>
+              <td class="duration" data-value="3802107331">3.802</td>
+              <td class="duration" data-value="3802107331">3.802</td>
+              <td class="duration" data-value="3802107331">3.802</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="507223841">0.507</td>
-              <td class="duration" data-value="507223841">0.507</td>
-              <td class="duration" data-value="507223841">0.507</td>
+              <td class="duration" data-value="457809286">0.457</td>
+              <td class="duration" data-value="457809286">0.457</td>
+              <td class="duration" data-value="457809286">0.457</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3194077934">3.194</td>
-              <td class="duration" data-value="3194077934">3.194</td>
-              <td class="duration" data-value="3194077934">3.194</td>
+              <td class="duration" data-value="4135310053">4.135</td>
+              <td class="duration" data-value="4135310053">4.135</td>
+              <td class="duration" data-value="4135310053">4.135</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3589694375">3.589</td>
-              <td class="duration" data-value="3589694375">3.589</td>
-              <td class="duration" data-value="3589694375">3.589</td>
+              <td class="duration" data-value="3573727471">3.573</td>
+              <td class="duration" data-value="3573727471">3.573</td>
+              <td class="duration" data-value="3573727471">3.573</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="208141007">0.208</td>
-              <td class="duration" data-value="208141007">0.208</td>
-              <td class="duration" data-value="208141007">0.208</td>
+              <td class="duration" data-value="207473731">0.207</td>
+              <td class="duration" data-value="207473731">0.207</td>
+              <td class="duration" data-value="207473731">0.207</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="209238399">0.209</td>
-              <td class="duration" data-value="209238399">0.209</td>
-              <td class="duration" data-value="209238399">0.209</td>
+              <td class="duration" data-value="205394865">0.205</td>
+              <td class="duration" data-value="205394865">0.205</td>
+              <td class="duration" data-value="205394865">0.205</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="216435">0.000</td>
-              <td class="duration" data-value="216435">0.000</td>
-              <td class="duration" data-value="216435">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="29383245">0.029</td>
+              <td class="duration" data-value="29383245">0.029</td>
+              <td class="duration" data-value="29383245">0.029</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="50011911216">50.011</td>
-              <td class="duration" data-value="50011911216">50.011</td>
-              <td class="duration" data-value="50011911216">50.011</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="8217350">0.008</td>
+              <td class="duration" data-value="8217350">0.008</td>
+              <td class="duration" data-value="8217350">0.008</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="50071207571">50.071</td>
-              <td class="duration" data-value="50071207571">50.071</td>
-              <td class="duration" data-value="50071207571">50.071</td>
+              <td class="duration" data-value="39688320700">39.688</td>
+              <td class="duration" data-value="39688320700">39.688</td>
+              <td class="duration" data-value="39688320700">39.688</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">8.078</td>
-            <td class="duration">50.071</td>
-            <td class="duration">2:17.338</td>
+            <td class="duration">4.676</td>
+            <td class="duration">39.688</td>
+            <td class="duration">1:19.508</td>
             <td>Totals</td>
           </tr>
         </tfoot>
