--- a/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>14 Dec 2021, 02:26</td>
+      <td>15 Dec 2021, 18:11</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1951754278">1.951</td>
-              <td class="duration" data-value="1951754278">1.951</td>
-              <td class="duration" data-value="1951754278">1.951</td>
+              <td class="duration" data-value="1424213015">1.424</td>
+              <td class="duration" data-value="1424213015">1.424</td>
+              <td class="duration" data-value="1424213015">1.424</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="112385349">0.112</td>
-              <td class="duration" data-value="112385349">0.112</td>
-              <td class="duration" data-value="112385349">0.112</td>
+              <td class="duration" data-value="115775483">0.115</td>
+              <td class="duration" data-value="115775483">0.115</td>
+              <td class="duration" data-value="115775483">0.115</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="148877854">0.148</td>
-              <td class="duration" data-value="148877854">0.148</td>
-              <td class="duration" data-value="148877854">0.148</td>
+              <td class="duration" data-value="153301388">0.153</td>
+              <td class="duration" data-value="153301388">0.153</td>
+              <td class="duration" data-value="153301388">0.153</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="679829936">0.679</td>
-              <td class="duration" data-value="679829936">0.679</td>
-              <td class="duration" data-value="679829936">0.679</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="285657">0.000</td>
+              <td class="duration" data-value="285657">0.000</td>
+              <td class="duration" data-value="285657">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="5573144251">5.573</td>
-              <td class="duration" data-value="5573144251">5.573</td>
-              <td class="duration" data-value="5573144251">5.573</td>
+              <td class="duration" data-value="6475560782">6.475</td>
+              <td class="duration" data-value="6475560782">6.475</td>
+              <td class="duration" data-value="6475560782">6.475</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14252266875">14.252</td>
-              <td class="duration" data-value="14252266875">14.252</td>
-              <td class="duration" data-value="14252266875">14.252</td>
+              <td class="duration" data-value="14347020104">14.347</td>
+              <td class="duration" data-value="14347020104">14.347</td>
+              <td class="duration" data-value="14347020104">14.347</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="870518689">0.870</td>
-              <td class="duration" data-value="870518689">0.870</td>
-              <td class="duration" data-value="870518689">0.870</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="305830">0.000</td>
+              <td class="duration" data-value="305830">0.000</td>
+              <td class="duration" data-value="305830">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2341313781">2.341</td>
-              <td class="duration" data-value="2341313781">2.341</td>
-              <td class="duration" data-value="2341313781">2.341</td>
+              <td class="duration" data-value="2344155229">2.344</td>
+              <td class="duration" data-value="2344155229">2.344</td>
+              <td class="duration" data-value="2344155229">2.344</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3748331236">3.748</td>
-              <td class="duration" data-value="3748331236">3.748</td>
-              <td class="duration" data-value="3748331236">3.748</td>
+              <td class="duration" data-value="3755461146">3.755</td>
+              <td class="duration" data-value="3755461146">3.755</td>
+              <td class="duration" data-value="3755461146">3.755</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="375481799">0.375</td>
-              <td class="duration" data-value="375481799">0.375</td>
-              <td class="duration" data-value="375481799">0.375</td>
+              <td class="duration" data-value="455699166">0.455</td>
+              <td class="duration" data-value="455699166">0.455</td>
+              <td class="duration" data-value="455699166">0.455</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3222126242">3.222</td>
-              <td class="duration" data-value="3222126242">3.222</td>
-              <td class="duration" data-value="3222126242">3.222</td>
+              <td class="duration" data-value="4142849234">4.142</td>
+              <td class="duration" data-value="4142849234">4.142</td>
+              <td class="duration" data-value="4142849234">4.142</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3576069762">3.576</td>
-              <td class="duration" data-value="3576069762">3.576</td>
-              <td class="duration" data-value="3576069762">3.576</td>
+              <td class="duration" data-value="3551533376">3.551</td>
+              <td class="duration" data-value="3551533376">3.551</td>
+              <td class="duration" data-value="3551533376">3.551</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="200931347">0.200</td>
-              <td class="duration" data-value="200931347">0.200</td>
-              <td class="duration" data-value="200931347">0.200</td>
+              <td class="duration" data-value="205410365">0.205</td>
+              <td class="duration" data-value="205410365">0.205</td>
+              <td class="duration" data-value="205410365">0.205</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="175227328">0.175</td>
-              <td class="duration" data-value="175227328">0.175</td>
-              <td class="duration" data-value="175227328">0.175</td>
+              <td class="duration" data-value="202202405">0.202</td>
+              <td class="duration" data-value="202202405">0.202</td>
+              <td class="duration" data-value="202202405">0.202</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="45318536">0.045</td>
-              <td class="duration" data-value="45318536">0.045</td>
-              <td class="duration" data-value="45318536">0.045</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="340809">0.000</td>
+              <td class="duration" data-value="340809">0.000</td>
+              <td class="duration" data-value="340809">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="7893164">0.007</td>
-              <td class="duration" data-value="7893164">0.007</td>
-              <td class="duration" data-value="7893164">0.007</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="50022981946">50.022</td>
+              <td class="duration" data-value="50022981946">50.022</td>
+              <td class="duration" data-value="50022981946">50.022</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="39714044919">39.714</td>
-              <td class="duration" data-value="39714044919">39.714</td>
-              <td class="duration" data-value="39714044919">39.714</td>
+              <td class="duration" data-value="50039977053">50.039</td>
+              <td class="duration" data-value="50039977053">50.039</td>
+              <td class="duration" data-value="50039977053">50.039</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">4.529</td>
-            <td class="duration">39.714</td>
-            <td class="duration">1:16.995</td>
+            <td class="duration">8.072</td>
+            <td class="duration">50.039</td>
+            <td class="duration">2:17.237</td>
             <td>Totals</td>
           </tr>
         </tfoot>
