deploy: 5ccadcae232a8152198a80faf05b10674b870b13

--- a/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>26 Jan 2022, 05:28</td>
+      <td>26 Jan 2022, 05:38</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="2161988203">2.161</td>
-              <td class="duration" data-value="2161988203">2.161</td>
-              <td class="duration" data-value="2161988203">2.161</td>
+              <td class="duration" data-value="1549871898">1.549</td>
+              <td class="duration" data-value="1549871898">1.549</td>
+              <td class="duration" data-value="1549871898">1.549</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="208501">0.000</td>
-              <td class="duration" data-value="208501">0.000</td>
-              <td class="duration" data-value="208501">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="140721147">0.140</td>
+              <td class="duration" data-value="140721147">0.140</td>
+              <td class="duration" data-value="140721147">0.140</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="211288763">0.211</td>
-              <td class="duration" data-value="211288763">0.211</td>
-              <td class="duration" data-value="211288763">0.211</td>
+              <td class="duration" data-value="161556607">0.161</td>
+              <td class="duration" data-value="161556607">0.161</td>
+              <td class="duration" data-value="161556607">0.161</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="204537">0.000</td>
-              <td class="duration" data-value="204537">0.000</td>
-              <td class="duration" data-value="204537">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="830333424">0.830</td>
+              <td class="duration" data-value="830333424">0.830</td>
+              <td class="duration" data-value="830333424">0.830</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="104711967170">1:44.711</td>
-              <td class="duration" data-value="104711967170">1:44.711</td>
-              <td class="duration" data-value="104711967170">1:44.711</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="6317514943">6.317</td>
+              <td class="duration" data-value="6317514943">6.317</td>
+              <td class="duration" data-value="6317514943">6.317</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="15240047506">15.240</td>
-              <td class="duration" data-value="15240047506">15.240</td>
-              <td class="duration" data-value="15240047506">15.240</td>
+              <td class="duration" data-value="14540238941">14.540</td>
+              <td class="duration" data-value="14540238941">14.540</td>
+              <td class="duration" data-value="14540238941">14.540</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="176586">0.000</td>
-              <td class="duration" data-value="176586">0.000</td>
-              <td class="duration" data-value="176586">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="941874083">0.941</td>
+              <td class="duration" data-value="941874083">0.941</td>
+              <td class="duration" data-value="941874083">0.941</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2375685547">2.375</td>
-              <td class="duration" data-value="2375685547">2.375</td>
-              <td class="duration" data-value="2375685547">2.375</td>
+              <td class="duration" data-value="2348993733">2.348</td>
+              <td class="duration" data-value="2348993733">2.348</td>
+              <td class="duration" data-value="2348993733">2.348</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="4236955427">4.236</td>
-              <td class="duration" data-value="4236955427">4.236</td>
-              <td class="duration" data-value="4236955427">4.236</td>
+              <td class="duration" data-value="3770486049">3.770</td>
+              <td class="duration" data-value="3770486049">3.770</td>
+              <td class="duration" data-value="3770486049">3.770</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="160626">0.000</td>
-              <td class="duration" data-value="160626">0.000</td>
-              <td class="duration" data-value="160626">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="628036090">0.628</td>
+              <td class="duration" data-value="628036090">0.628</td>
+              <td class="duration" data-value="628036090">0.628</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="178425">0.000</td>
-              <td class="duration" data-value="178425">0.000</td>
-              <td class="duration" data-value="178425">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="4511141471">4.511</td>
+              <td class="duration" data-value="4511141471">4.511</td>
+              <td class="duration" data-value="4511141471">4.511</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="168816">0.000</td>
-              <td class="duration" data-value="168816">0.000</td>
-              <td class="duration" data-value="168816">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3641609950">3.641</td>
+              <td class="duration" data-value="3641609950">3.641</td>
+              <td class="duration" data-value="3641609950">3.641</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="264487543">0.264</td>
-              <td class="duration" data-value="264487543">0.264</td>
-              <td class="duration" data-value="264487543">0.264</td>
+              <td class="duration" data-value="192576344">0.192</td>
+              <td class="duration" data-value="192576344">0.192</td>
+              <td class="duration" data-value="192576344">0.192</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="256431107">0.256</td>
-              <td class="duration" data-value="256431107">0.256</td>
-              <td class="duration" data-value="256431107">0.256</td>
+              <td class="duration" data-value="179806025">0.179</td>
+              <td class="duration" data-value="179806025">0.179</td>
+              <td class="duration" data-value="179806025">0.179</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="153506">0.000</td>
-              <td class="duration" data-value="153506">0.000</td>
-              <td class="duration" data-value="153506">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="42641995">0.042</td>
+              <td class="duration" data-value="42641995">0.042</td>
+              <td class="duration" data-value="42641995">0.042</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="163395">0.000</td>
-              <td class="duration" data-value="163395">0.000</td>
-              <td class="duration" data-value="163395">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="13814081">0.013</td>
+              <td class="duration" data-value="13814081">0.013</td>
+              <td class="duration" data-value="13814081">0.013</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="191235">0.000</td>
-              <td class="duration" data-value="191235">0.000</td>
-              <td class="duration" data-value="191235">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="39717886864">39.717</td>
+              <td class="duration" data-value="39717886864">39.717</td>
+              <td class="duration" data-value="39717886864">39.717</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">7.615</td>
-            <td class="duration">1:44.711</td>
-            <td class="duration">2:9.460</td>
+            <td class="duration">4.678</td>
+            <td class="duration">39.717</td>
+            <td class="duration">1:19.529</td>
             <td>Totals</td>
           </tr>
         </tfoot>
